# diff-risk

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dogfood.yml  release.yml  security.yml
crates/diff-risk-cli/: Cargo.toml
crates/diff-risk-cli/src/: main.rs
crates/diff-risk-core/: Cargo.toml
crates/diff-risk-core/src/: diff.rs  lib.rs  report.rs  scoring.rs
crates/diff-risk-core/src/detectors/: api_contract.rs  async_boundary.rs  auth.rs  brace_depth.rs  concurrency.rs  config_detector.rs  mod.rs  serde_drift.rs
crates/diff-risk-core/tests/: calibration.rs
crates/diff-risk-core/tests/fixtures/: api_pub_fn_signature_change.diff  auth_bypass_deletion.diff  jwt_middleware_added.diff  low_risk_refactor.diff  serde_rename_removed.diff  token_leak_log.diff  unsafe_ptr_deref_added.diff
