[package]
name = "diff-risk-cli"
description = "CLI front-end for diff-risk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[[bin]]
name = "diff-risk"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
diff-risk-core = { path = "../diff-risk-core", version = "0.2.0" }
