[package]
name = "diff-risk-core"
description = "Semantic risk scoring engine for Rust diffs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
regex = { workspace = true }
serde = { workspace = true }
toml = "0.8"
thiserror = { workspace = true }

[dev-dependencies]
